tests/parser/errors/match_case_pattern_index.mochi
let xs = [1, 2]
let r = match xs { xs[0] => "first" _ => "rest" }
